2015-01-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/MinGW-3.4/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/SunStudio-8/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/VisualStudio2008/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/VisualStudio2010/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/gcc-3.3-apple/config-public-compiler.h_strict,
 config/sample-headers/compiler/gcc-3.3-apple/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/gcc-3.3/config-public-compiler.h_strict,
 config/sample-headers/compiler/gcc-3.3/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/gcc-4.2/pqxx/config-public-compiler.h,
 configitems, configure.ac.in, include/pqxx/compiler-public.hxx,
 include/pqxx/config.h.in:
 - Remove workaround for missing char_traits.
2015-01-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/VisualC++.NET-2003,
 config/sample-headers/compiler/VisualStudio2005,
 config/sample-headers/compiler/gcc-2.95:
 - Remove sample headers for very old compilers.
2015-01-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/MinGW-3.4/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/SunStudio-8/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/VisualC++.NET-2003/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/VisualStudio2005/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/VisualStudio2008/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/VisualStudio2010/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/gcc-2.95/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/gcc-3.3-apple/config-public-compiler.h_strict,
 config/sample-headers/compiler/gcc-3.3-apple/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/gcc-3.3/config-public-compiler.h_strict,
 config/sample-headers/compiler/gcc-3.3/pqxx/config-public-compiler.h,