@@ -5,6 +5,5 @@
 #define PQXX_HAVE_LOCALE 1
 #define PQXX_HAVE_QUIET_NAN 1
 /* #define PQXX_HAVE_SLEEP 1 */
-#define PQXX_HAVE_STRING_CLEAR 1
 /* #define PQXX_HAVE_SYS_SELECT_H 1 */
 #define PQXX_SELECT_ACCEPTS_NULL 1
