@@ -4,6 +4,5 @@
 #define PQXX_HAVE_IMBUE 1
 #define PQXX_HAVE_LOCALE 1
 #define PQXX_HAVE_SLEEP 1
-#define PQXX_HAVE_STRING_CLEAR 1
 /* #undef PQXX_HAVE_SYS_SELECT_H */
 #define PQXX_SELECT_ACCEPTS_NULL 1
