@@ -11,7 +11,6 @@
 #define PQXX_HAVE_QUIET_NAN 1
 #define PQXX_HAVE_SLEEP 1
 #define PQXX_HAVE_STRERROR_R 1
-#define PQXX_HAVE_STRING_CLEAR 1
 /* #undef PQXX_HAVE_STRLCPY */
 #define PQXX_HAVE_STRNLEN 1
 #define PQXX_HAVE_SYS_SELECT_H 1
