@@ -1,4 +1,15 @@
 2015-01-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ config/sample-headers/compiler/MinGW-3.4/pqxx/config-internal-compiler.h,
+ config/sample-headers/compiler/SunStudio-8/pqxx/config-internal-compiler.h,
+ config/sample-headers/compiler/VisualStudio2008/pqxx/config-internal-compiler.h,
+ config/sample-headers/compiler/VisualStudio2010/pqxx/config-internal-compiler.h,
+ config/sample-headers/compiler/gcc-3.3-apple/pqxx/config-internal-compiler.h,
+ config/sample-headers/compiler/gcc-3.3/pqxx/config-internal-compiler.h,
+ config/sample-headers/compiler/gcc-4.2/pqxx/config-internal-compiler.h,
+ configitems, configure.ac.in, include/pqxx/config.h.in,
+ src/transaction_base.cxx:
+ - Remove workaround for missing string::clear().
+2015-01-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
  config/sample-headers/compiler/MinGW-3.4/pqxx/config-public-compiler.h,
  config/sample-headers/compiler/SunStudio-8/pqxx/config-public-compiler.h,
  config/sample-headers/compiler/VisualStudio2008/pqxx/config-public-compiler.h,
